--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,12 @@
+# Cargo.toml
+# Copyright 2016 Alexander Ronald Altman.
+#
+# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
+# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
+# <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
+# option. This file may not be copied, modified, or distributed
+# except according to those terms.
+
 [package]
 name = "RFC-stuff"
 version = "0.1.0"
